fix(inlayhints): выровнять контракт nullability и устранить замечания Sonar
VariableTypeInlayHintSupplier: simpleTargetIdentifier/inferType/extractData/
toInlayHint теперь возвращают Optional вместо null (методы @NullMarked-пакета).
getInlayHints: flatMap(Optional::stream) + toList() (S6204). resolve и getInlayHints
переведены на Optional.isEmpty(); убраны ставшие мёртвыми null-проверки (S2583/S2589):
expression==null в isTrivialLiteral (параметр @NonNull), identifier/inferredType/data.
S864: скобки вокруг конкатенации в тернаре tooltip.

InlayHintProvider: dataField/extractSupplierId возвращают Optional<String>;
extractUri через map(Absolute::uri); resolveInlayHint на Optional.isEmpty().

Тесты: непокрытые ветки type-хинтов и resolve — цель-член (хинта нет),
тип не выводится (хинта нет), запрос вне диапазона, resolve без data,
resolve с неизвестным типом (fallback по имени), provider.resolveInlayHint
без data и с неизвестным сапплаером, extractUri пусто/из data.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>